# SparkDns

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: index.html  prototype-index.html
src/: api.ts  defaults.ts  main.ts  state.ts  styles.css  types.ts  update.ts
src-tauri/: Cargo.toml  SparkDns.exe.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command_runner.rs  config.rs  diagnostics.rs  elevation.rs  errors.rs  lib.rs  main.rs  models.rs  platform.rs  process_watcher.rs  validation.rs
src-tauri/src/dns/: linux.rs  macos.rs  mod.rs  windows.rs
src/ui/: dialog.ts  notify.ts  toast.ts
src/utils/: validation.ts
src/views/: about.ts  autoswitch.ts  diagnostics.ts  home.ts  profiles.ts  prototype.ts  rules.ts  settings.ts  tools.ts
